--- a/0WEB/css/portafolio.css
+++ b/0WEB/css/portafolio.css
@@ -1,5 +1,5 @@
 :root{
-    --main-color:#148ac0;
+    --main-color:#d875d3;
     --text-color: #101314;
 
 
@@ -68,3 +68,49 @@ section#main{
     width: 100%;
     height: 100%;
 }
+#main #overlay{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+   /* background-image: url(../img/patron.png);*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.8;
+    z-index: 3;
+}
+#main #overlay h2{
+    margin-top: 200px;
+    color: white;
+    text-align: center;
+    font-size: 4rem;
+}
+#main #overlay h3{
+    text-align:  center;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2rem;
+    }
+    .btn{
+        width: 200px;
+        height: 50px;
+        border-radius: 4px;
+        padding: 8px;
+        font-size:  1rem;
+    }
+    .btn-primary{
+        background-color: #d875d3;
+        color: white;
+        text-transform: uppercase;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .btn-primary:hover{
+        transform: scale(1.5);
+        cursor: pointer;
+        top: 1%;
+    }
+    a.btn{
+        text-decoration: none;
+        color: white;
+    }
