--- a/0WEB/css/portafolio.css
+++ b/0WEB/css/portafolio.css
@@ -61,23 +61,26 @@ header nav ul li a:hover{
     color: var(--main-color);
 }
 section#main{
-    background-color: black;
+    background-color:black;
     height: 100vh;
+    overflow:hidden;
+    
 }
 #main video{
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 #main #overlay{
     width: 100%;
     height: 100%;
     background-color: black;
    /* background-image: url(../img/patron.png);*/
-    position: absolute;
+    position:absolute;
     top: 0;
     left: 0;
     opacity: 0.8;
     z-index: 3;
+
 }
 #main #overlay h2{
     margin-top: 200px;
@@ -114,3 +117,121 @@ section#main{
         text-decoration: none;
         color: white;
     }
+    #main, #about, #proyectos, #contactanos, #titulo, #derechos,#overlay {
+        width: 100%;
+        height: 700px;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    #about .col, #contacto .col{
+        float: left;
+        width: 50%;
+        text-align: justify;
+    }
+    #about h2{
+        text-align: center;
+        font-size: 3rem;
+        padding-top: 30px;
+        font-family: 'Open Sans', sans-serif;
+    }
+    #about > .col > h2{
+        font-size: 2rem;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: lighter;
+    }
+   #about .col img{
+        width: 70%;
+        display: block;
+        margin: 20px auto;
+    }
+    #about .col p{
+        margin-top: 50px;
+    }
+    #titulo{
+        height: 110px;
+        background-image:url(../img/moras.jpg);
+        text-align: center;
+        color: white;
+        font-size: 2rem;
+        padding-top: 50px;
+
+    }
+    
+    #proyectos h3{
+        text-align: left;
+        font-size: 1rem;
+        padding-top: 30px;
+        font-family: 'Open Sans', sans-serif;
+
+    }
+    section#proyectos{
+        height: 100vh;
+        overflow: hidden;
+        
+    }
+    #proyectos img{
+        min-width: 100%;
+        min-height: 100%;
+    }
+
+    /*ascoooooo*/
+
+#caja1 .item{
+    width: 23%;
+    background-color: pink;
+    height:350px;
+    float: left;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 20px;
+    border-radius: 20px;
+    
+}
+.btn-proyecto{
+    background-color: cornflowerblue;
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 1%;
+    
+}
+fieldset,textarea {
+    border:hidden;
+    padding-top: 30px;
+    width: 80%;
+    resize: none;
+}
+input{
+    border: hidden;
+    width: 80%;
+    height: 30px;
+}
+.btn-enviar{
+    background-color:cornflowerblue;
+        color: white;
+        padding-left: 10px;
+        padding-right: 10px;
+}
+fieldset h3{
+    text-align: left;
+    font-size: 2rem;
+    padding-top: 30px;
+    font-family: 'Open Sans', sans-serif;
+}
+#caja1 .item .imagen{
+    width: 23%;
+    height:70x;
+    border-radius: 20px;
+
+}
+#caja1 .item .try3{
+    text-align: center;
+    
+    }
+#derechos{
+    height: 80px;
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding-top: 100px;
+}
