--- a/0WEB/html/css/portafolio.css
+++ b/0WEB/html/css/portafolio.css
@@ -125,7 +125,7 @@ section#main{
        min-height: 700px;
 
     }
-    #main, #titulo,#overlay ,#derechos{
+    #main, #titulo,#overlay , #derechos{
         width: 100%;
        height: 700px;
     }
@@ -171,7 +171,7 @@ section#main{
 
     }
     #proyectos{
-        height: 100vh;
+        height: auto;
         overflow: hidden;
         
     }
@@ -240,4 +240,5 @@ fieldset h3{
     text-align: center;
     color: white;
     padding-top: 100px;
+    float: left;
 }
