--- a/0WEB/html/css/mediaquerys.css
+++ b/0WEB/html/css/mediaquerys.css
@@ -42,4 +42,16 @@
             padding-top: 100px;
             float: left;
         }
+        @media(max-width: 700px){
+
+        }
+        @media print {
+            #main video{
+                display: none;
+            }
+            body{
+                background-color: white;
+            }
+            
+        }
 } 
