--- a/0WEB/ptweet/css/estilos.css
+++ b/0WEB/ptweet/css/estilos.css
@@ -137,6 +137,7 @@ main{
     height: 50px;
     border-radius:50%;
     border:2px solid var(--p-amarillo);
+    float:left;
 }
 #newPost, .post{
    
